# wigame

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: accessor.rs  app.rs  component.rs  entity.rs  event.rs  filter.rs  lib.rs  query.rs  system.rs  world.rs
crates/app/src/asset/: assets.rs  daemon.rs  handle.rs  mod.rs
crates/app/src/demo_query/: query.rs  view.rs
crates/app/src/demo_system/: command.rs  mod.rs  schedule.rs  system.rs
crates/app/src/query/: mod.rs  query.rs  view.rs
crates/app/src/system/: command.rs  executor.rs  label.rs  mod.rs  resources.rs  schedule.rs  stage.rs  system.rs
crates/render/: Cargo.toml
crates/render/src/: buffer.rs  camera.rs  lib.rs  material.rs  renderable.rs  renderer.rs  shader.wgsl  surface.rs  texture.rs
crates/render/src/base/: binding.rs  descriptor.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
crates/render/src/wgpu_backend/: mod.rs  render_assets.rs  renderer.rs  surface.rs
crates/util/: Cargo.toml
crates/util/src/: anymap.rs  blob_sparse_set.rs  blob_vec.rs  cons.rs  lib.rs  sparse_set.rs
crates/window/: Cargo.toml
crates/window/src/: events.rs  lib.rs  manager.rs  runner.rs
src/: main.rs  shader.wgsl
