[package]
name = "render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }
util = { path = "../util" }
window_plugin = { package = "window", path = "../window" }
wgpu = "0.10.2"
