[package]
name = "util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.2"
parking_lot = "0.11.2"
rayon = "1.5.1"
smallvec = "1.6.1"
downcast-rs = "1.2.0"
atomic_refcell = "0.1.7"
pollster = "0.2.4"
anyhow = "1.0.44"
cgmath = "0.18.0"
rand = "0.8.4"
crossbeam-channel = "0.5.1"
